# wishstone

./: README.md  index.js  requestHandlers.js  router.js  server.js
backend/: .gitignore  main.py  pyproject.toml
backend/app/: __init__.py  ai_analyzer.py  crypto.py  database.py  logger_config.py  routes.py
frontend/: .gitignore  package.json  vite.config.ts
frontend/messages/: ar.json  hi.json
frontend/src/: app.html
frontend/src/routes/: +layout.svelte  +page.svelte
